--- a/output.css
+++ b/output.css
@@ -873,8 +873,16 @@ input[type="range"]::-ms-fill-lower {
   position: relative;
 }
 
+.-right-\[25px\] {
+  right: -25px;
+}
+
 .-top-5 {
   top: -1.25rem;
+}
+
+.bottom-\[6px\] {
+  bottom: 6px;
 }
 
 .left-0 {
@@ -891,6 +899,10 @@ input[type="range"]::-ms-fill-lower {
 
 .top-0 {
   top: 0px;
+}
+
+.top-\[6px\] {
+  top: 6px;
 }
 
 .\!mb-0 {
@@ -1013,10 +1025,6 @@ input[type="range"]::-ms-fill-lower {
   height: 2.25rem;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
-}
-
 .h-\[107px\] {
   height: 107px;
 }
@@ -1121,10 +1129,6 @@ input[type="range"]::-ms-fill-lower {
   width: 0px;
 }
 
-.w-\[100vw\] {
-  width: 100vw;
-}
-
 .w-\[107px\] {
   width: 107px;
 }
@@ -1204,6 +1208,10 @@ input[type="range"]::-ms-fill-lower {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.resize {
+  resize: both;
 }
 
 .list-disc {
@@ -1613,86 +1621,90 @@ input[type="range"]::-ms-fill-lower {
   --scrollbar-width: 0.25rem;
 }
 
-body {
-  background: black;
-}
-
 .bot-container {
   position: fixed;
-  right: 40px;
-  bottom: 40px;
-  z-index: 100000;
+  right: 40px !important;
+  top: unset !important;
+  bottom: 40px !important;
+  z-index: 120000;
+  --tw-shadow: 7px 7px 10px 0px #231F201C;
+  --tw-shadow-colored: 7px 7px 10px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.bot-admin-container {
+  width: 100vw;
+  height: calc(100vh - 73px);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 110000;
 }
 
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
 
-* {
+.bot-admin-container *, .bot-container * {
   font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial)
 }
 
-*::-webkit-scrollbar-track {
+.bot-admin-container *::-webkit-scrollbar-track, .bot-container *::-webkit-scrollbar-track {
   background-color: var(--scrollbar-track);
   border-radius: var(--scrollbar-track-radius);
 }
 
-*::-webkit-scrollbar-track:hover {
+.bot-admin-container *::-webkit-scrollbar-track:hover, .bot-container *::-webkit-scrollbar-track:hover {
   background-color: var(--scrollbar-track-hover, var(--scrollbar-track));
 }
 
-*::-webkit-scrollbar-track:active {
+.bot-admin-container *::-webkit-scrollbar-track:active, .bot-container *::-webkit-scrollbar-track:active {
   background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track)));
 }
 
-*::-webkit-scrollbar-thumb {
+.bot-admin-container *::-webkit-scrollbar-thumb, .bot-container *::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb);
   border-radius: var(--scrollbar-thumb-radius);
 }
 
-*::-webkit-scrollbar-thumb:hover {
+.bot-admin-container *::-webkit-scrollbar-thumb:hover, .bot-container *::-webkit-scrollbar-thumb:hover {
   background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb));
 }
 
-*::-webkit-scrollbar-thumb:active {
+.bot-admin-container *::-webkit-scrollbar-thumb:active, .bot-container *::-webkit-scrollbar-thumb:active {
   background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb)));
 }
 
-*::-webkit-scrollbar-corner {
+.bot-admin-container *::-webkit-scrollbar-corner, .bot-container *::-webkit-scrollbar-corner {
   background-color: var(--scrollbar-corner);
   border-radius: var(--scrollbar-corner-radius);
 }
 
-*::-webkit-scrollbar-corner:hover {
+.bot-admin-container *::-webkit-scrollbar-corner:hover, .bot-container *::-webkit-scrollbar-corner:hover {
   background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner));
 }
 
-*::-webkit-scrollbar-corner:active {
+.bot-admin-container *::-webkit-scrollbar-corner:active, .bot-container *::-webkit-scrollbar-corner:active {
   background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner)));
 }
 
-* {
+.bot-admin-container *, .bot-container * {
   scrollbar-width: auto;
 }
 
-*::-webkit-scrollbar {
+.bot-admin-container *::-webkit-scrollbar, .bot-container *::-webkit-scrollbar {
   display: block;
   width: var(--scrollbar-width, 16px);
   height: var(--scrollbar-height, 16px);
 }
 
-* {
+.bot-admin-container *, .bot-container * {
   --scrollbar-track: #D1D5DB;
   --scrollbar-thumb: #F79052;
   --scrollbar-width: 0.25rem;
 }
 
-#root {
-  width: 100vw;
-  height: 100vh;
-}
-
-img {
+.bot-admin-container img, .bot-container img {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -1706,31 +1718,35 @@ img {
   /* Opera */
 }
 
-input {
+.bot-admin-container input, .bot-container input {
   outline: none;
   /* &:focus {
         box-shadow: none !important;
     } */
 }
 
-button {
+.bot-admin-container button, .bot-container button {
   outline: none;
   box-shadow: none;
   border: 0px;
 }
 
-ul,
-li {
+.bot-admin-container ul, .bot-container ul {
   margin: 0px;
   padding: 0px;
 }
 
-a {
+.bot-admin-container li, .bot-container li {
+  margin: 0px;
+  padding: 0px;
+}
+
+.bot-admin-container a, .bot-container a {
   outline: none;
   text-decoration: none;
 }
 
-.max-now {
+.bot-admin-container .max-now, .bot-container .max-now  {
   position: fixed;
   left: 0;
   right: unset;
