--- a/output.css
+++ b/output.css
@@ -1229,6 +1229,10 @@ input[type="range"]::-ms-fill-lower {
   width: 100%;
 }
 
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1300,6 +1304,10 @@ input[type="range"]::-ms-fill-lower {
 
 .scroll-smooth {
   scroll-behavior: smooth;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
 }
 
 .\!rounded-none {
