--- a/output.css
+++ b/output.css
@@ -1217,6 +1217,10 @@ input[type="range"]::-ms-fill-lower {
   width: 42px;
 }
 
+.w-\[450px\] {
+  width: 450px;
+}
+
 .w-\[48px\] {
   width: 48px;
 }
@@ -1672,6 +1676,57 @@ input[type="range"]::-ms-fill-lower {
   top: unset !important;
   bottom: 40px !important;
   z-index: 120000;
+}
+
+.bot-container .language-box {
+  height: 24px;
+  width: 50px;
+  --tw-border-opacity: 1;
+  border-color: rgb(247 144 82 / var(--tw-border-opacity));
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 9px;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(247 144 82 / var(--tw-text-opacity));
+}
+
+.bot-container .language-box option {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.bot-container .language-box option:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 144 82 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.bot-container .language-box:not([size]) {
+  background-image: url("data:image/svg+xml,%3csvg aria-hidden='true' xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 10 6'%3e %3cpath stroke='%23F79052' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m1 1 4 4 4-4'/%3e %3c/svg%3e");
+  background-position: right 0.4rem center;
+}
+
+.bot-container .required-input  {
+  position: relative;
+}
+
+.bot-container .required-input::before  {
+  display: block;
+  content: "*";
+  right: 12px;
+  top: -3px;
+  position: absolute;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(200 30 30 / var(--tw-text-opacity));
 }
 
 .bot-admin-container {
