--- a/output.css
+++ b/output.css
@@ -917,6 +917,10 @@ input[type="range"]::-ms-fill-lower {
   margin-top: -6rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -1577,6 +1581,10 @@ input[type="range"]::-ms-fill-lower {
   font-weight: 600;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -1701,7 +1709,7 @@ input[type="range"]::-ms-fill-lower {
   right: 40px !important;
   top: unset !important;
   bottom: 40px !important;
-  z-index: 120000;
+  z-index: 1100000;
 }
 
 @media only screen and (max-width: 768px) {
@@ -1773,7 +1781,7 @@ input[type="range"]::-ms-fill-lower {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 110000;
+  z-index: 1100000;
 }
 
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
