--- a/output.css
+++ b/output.css
@@ -893,10 +893,6 @@ input[type="range"]::-ms-fill-lower {
   left: 1rem;
 }
 
-.right-0 {
-  right: 0px;
-}
-
 .right-4 {
   right: 1rem;
 }
@@ -905,20 +901,8 @@ input[type="range"]::-ms-fill-lower {
   top: 0px;
 }
 
-.top-\[40px\] {
-  top: 40px;
-}
-
 .\!mb-0 {
   margin-bottom: 0px !important;
-}
-
-.-mt-24 {
-  margin-top: -6rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 
 .mb-2 {
@@ -927,18 +911,6 @@ input[type="range"]::-ms-fill-lower {
 
 .mb-2\.5 {
   margin-bottom: 0.625rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .ml-1 {
@@ -973,14 +945,6 @@ input[type="range"]::-ms-fill-lower {
   margin-right: 0.5rem;
 }
 
-.mr-2\.5 {
-  margin-right: 0.625rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
@@ -995,10 +959,6 @@ input[type="range"]::-ms-fill-lower {
 
 .mt-1 {
   margin-top: 0.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-8 {
@@ -1029,6 +989,10 @@ input[type="range"]::-ms-fill-lower {
   height: 3rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -1037,24 +1001,12 @@ input[type="range"]::-ms-fill-lower {
   height: 2.25rem;
 }
 
-.h-\[107px\] {
-  height: 107px;
-}
-
 .h-\[10px\] {
   height: 10px;
 }
 
-.h-\[120px\] {
-  height: 120px;
-}
-
 .h-\[16px\] {
   height: 16px;
-}
-
-.h-\[19px\] {
-  height: 19px;
 }
 
 .h-\[20px\] {
@@ -1067,14 +1019,6 @@ input[type="range"]::-ms-fill-lower {
 
 .h-\[26px\] {
   height: 26px;
-}
-
-.h-\[28px\] {
-  height: 28px;
-}
-
-.h-\[32px\] {
-  height: 32px;
 }
 
 .h-\[36px\] {
@@ -1093,10 +1037,6 @@ input[type="range"]::-ms-fill-lower {
   height: 48px;
 }
 
-.h-\[500px\] {
-  height: 500px;
-}
-
 .h-\[60px\] {
   height: 60px;
 }
@@ -1105,12 +1045,12 @@ input[type="range"]::-ms-fill-lower {
   height: 6px;
 }
 
-.h-\[80px\] {
-  height: 80px;
+.h-\[70px\] {
+  height: 70px;
 }
 
-.h-\[calc\(100\%_-_120px\)\] {
-  height: calc(100% - 120px);
+.h-\[80px\] {
+  height: 80px;
 }
 
 .h-\[calc\(100\%_-_50px\)\] {
@@ -1137,20 +1077,16 @@ input[type="range"]::-ms-fill-lower {
   width: 50%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
 .w-12 {
   width: 3rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-64 {
@@ -1161,24 +1097,12 @@ input[type="range"]::-ms-fill-lower {
   width: 0px;
 }
 
-.w-\[107px\] {
-  width: 107px;
-}
-
 .w-\[10px\] {
   width: 10px;
 }
 
 .w-\[16px\] {
   width: 16px;
-}
-
-.w-\[19px\] {
-  width: 19px;
-}
-
-.w-\[200px\] {
-  width: 200px;
 }
 
 .w-\[20px\] {
@@ -1193,20 +1117,12 @@ input[type="range"]::-ms-fill-lower {
   width: 26px;
 }
 
-.w-\[28px\] {
-  width: 28px;
-}
-
 .w-\[320px\] {
   width: 320px;
 }
 
 .w-\[32px\] {
   width: 32px;
-}
-
-.w-\[36px\] {
-  width: 36px;
 }
 
 .w-\[380px\] {
@@ -1217,32 +1133,20 @@ input[type="range"]::-ms-fill-lower {
   width: 38px;
 }
 
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
 .w-\[42px\] {
   width: 42px;
-}
-
-.w-\[450px\] {
-  width: 450px;
 }
 
 .w-\[48px\] {
   width: 48px;
 }
 
-.w-\[60px\] {
-  width: 60px;
-}
-
 .w-\[80px\] {
   width: 80px;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-full {
@@ -1262,12 +1166,8 @@ input[type="range"]::-ms-fill-lower {
   cursor: pointer;
 }
 
-.resize {
-  resize: both;
-}
-
-.list-disc {
-  list-style-type: disc;
+.resize-none {
+  resize: none;
 }
 
 .grid-cols-4 {
@@ -1288,10 +1188,6 @@ input[type="range"]::-ms-fill-lower {
 
 .items-center {
   align-items: center;
-}
-
-.items-stretch {
-  align-items: stretch;
 }
 
 .justify-end {
@@ -1350,10 +1246,6 @@ input[type="range"]::-ms-fill-lower {
   border-radius: 0.5rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1392,6 +1284,11 @@ input[type="range"]::-ms-fill-lower {
 .border-border {
   --tw-border-opacity: 1;
   border-color: rgb(230 231 232 / var(--tw-border-opacity));
+}
+
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(247 144 82 / var(--tw-border-opacity));
 }
 
 .bg-\[\#F8F8F8\] {
@@ -1449,8 +1346,8 @@ input[type="range"]::-ms-fill-lower {
   padding: 0.75rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .p-\[1px\] {
@@ -1470,11 +1367,6 @@ input[type="range"]::-ms-fill-lower {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .py-1 {
@@ -1497,16 +1389,13 @@ input[type="range"]::-ms-fill-lower {
   padding-bottom: 1rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-4 {
   padding-bottom: 1rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
 }
 
 .pl-8 {
@@ -1515,10 +1404,6 @@ input[type="range"]::-ms-fill-lower {
 
 .pl-\[48px\] {
   padding-left: 48px;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
 }
 
 .pr-8 {
@@ -1537,25 +1422,8 @@ input[type="range"]::-ms-fill-lower {
   font-size: 10px;
 }
 
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.text-\[32px\] {
-  font-size: 32px;
-}
-
-.text-\[40px\] {
-  font-size: 40px;
-}
-
 .text-\[48px\] {
   font-size: 48px;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -1563,26 +1431,8 @@ input[type="range"]::-ms-fill-lower {
   line-height: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.font-medium {
-  font-weight: 500;
-}
-
 .font-semibold {
   font-weight: 600;
-}
-
-.italic {
-  font-style: italic;
 }
 
 .leading-6 {
@@ -1600,16 +1450,6 @@ input[type="range"]::-ms-fill-lower {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-label {
-  --tw-text-opacity: 1;
-  color: rgb(35 31 32 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1631,12 +1471,6 @@ input[type="range"]::-ms-fill-lower {
   --tw-shadow: 7px 7px 10px 0px #231F201C;
   --tw-shadow-colored: 7px 7px 10px 0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .scrollbar {
@@ -1706,9 +1540,18 @@ input[type="range"]::-ms-fill-lower {
 
 .bot-container {
   position: fixed;
-  right: 40px !important;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+}
+
+.chat-container {
+  width: 1024px !important;
+  height: 768px !important;
+  position: fixed;
+  right: calc(50vw - 512px);
   top: unset !important;
-  bottom: 40px !important;
+  bottom: calc(50vh - 384px);
   z-index: 1100000;
 }
 
@@ -1777,7 +1620,7 @@ input[type="range"]::-ms-fill-lower {
 
 .bot-admin-container {
   width: 100vw;
-  height: calc(100vh - 73px);
+  height: 100vh;
   position: fixed;
   left: 0;
   top: 0;
